<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.MainActivity$PlaceholderFragment" >

    


		<TableRow
		    android:id="@+id/linearLayout1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin">
        
	        <TextView
	            android:id="@+id/label_current_port_no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_current_port_no" />
	
	        <TextView
	            android:id="@+id/label_current_port_no_value"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="@dimen/activity_horizontal_margin"
	            android:text="@string/label_current_port_no_value" />
        
		</TableRow>
        

    

		<TableRow
		    android:id="@+id/linearLayout2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:layout_below="@id/linearLayout1">
	
	        <TextView
	            android:id="@+id/label_port_no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_port_no" />
	
	        <EditText
	            android:id="@+id/edit_message_port_no"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:hint="@string/edit_message_port_no"
	            android:inputType="number" >
	
	            <requestFocus />
	        </EditText>
        
        </TableRow>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="restartService"
        android:text="@string/button_restart" />

</RelativeLayout>